--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                     <h3>Esercizio 1</h3>
                 </div>
                 <div class="col-xs-12">
-                    <div class="well">
-                        <div class="ex-1-square"></div>
+                    <div class="well box-rosso">
+                        <div class="ex-1-square sfondo-rosso"></div>
                     </div>
                 </div>
                 <div class="col-xs-12">
-                    <p>In questo esercizio il nostro quadratino dovrà diventare gradualmente rosso quando l'utente e on hover con il mouse</p>
+                    <p>In questo esercizio il nostro quadratino dovrà diventare gradualmente rosso quando l'utente e con hover con il mouse</p>
                 </div>
             </div>
             <!-- Esercizio 2 -->
